# ProductOnRamp

./: .replit  alembic.ini  chat_with_db.py  delete_spanish.py  detailed_attributes_gpt.py  detailed_missing.py  extract_plan_info.py  langchain.md  main.py  models.py  product_database.md  pyproject.toml  summarize_gpt.py  summarize_missing.py
alembic/: env.py
alembic/versions/: 3a3492c3431a_add_product_fields.py  62632e51d6c1_change_column_types_to_text.py  749e4b1672aa_change_column_types_to_text.py  a6907fe320c3_increase_provider_network_phone_length.py
static/: script.js  styles.css
templates/: detailed_products_list.html  header.html  product_detail.html  products.html  stats.html
